# Sentinel

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py  worker.py
app/core/: exceptions.py  models.py
tests/: conftest.py
tests/unit/: test_config.py  test_exceptions.py  test_models.py
